--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,8 +12,9 @@
     "axios": "^1.7.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.0",
-    "react-hot-toast": "^2.4.1"
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.0",
